--- a/index.html
+++ b/index.html
@@ -43,21 +43,18 @@
         </div>
     </header>
 
-    <section id="banner">
+    <section id="banner" class="half-image-half-text">
         <div class="container">
-            <div class="banner-container">
-                <div class="left">
-                    <h1>VIBRAGOONS</h1>
-                    <h3>15,000 Unique VibraGoons for sale</h3>
-                    <h3>Minting Phase now Available</h3>
-                    <a href="">EXPLORE</a>
+            <div class="row">
+                <div class="col-lg-6 left">
+                    <h1 class="title">VIBRAGOONS</h1>
+                    <h3>Tron Edition</h3>
+                    <h4>15000 Unique NFT Game collectibles</h4>
+                    <h1 class="coming-soon">Coming Soon</h1>
+                    <!-- <a href="">EXPLORE</a> -->
                 </div>
-                <div class="right">
-                    <div class="img-container">
-                        <img src="/assets/img/Group1853.png" alt="" class="img-first">
-                        <img src="/assets/img/Group1854.png" alt="" class="img-second">
-                        <img src="/assets/img/Group1855.png" alt="" class="img-third">
-                    </div>
+                <div class="col-lg-6 right">
+                    <img src="/assets/img/banner-img.png" alt="">
                 </div>
             </div>
         </div>
@@ -111,7 +108,7 @@
     <section class="text-block">
         <div class="container">
             <div class="row">
-                <div class="col-xs-12">
+                <div class="col-md-12">
                     <h2>How it works</h2>
                     <p>
                         VibraGoons Is a first edition completely unique NFT collectible trading game that will diverse itself around multiple blockchains. Create sets of legendary Goons and win prizes as you navigate for Goons on different chains. 
@@ -127,7 +124,7 @@
     <section class="text-block">
         <div class="container">
             <div class="row">
-                <div class="col-xs-12">
+                <div class="col-md-12">
                     <h2>About Us</h2>
                     <p>
                         The VibraVid homies are created by The VibraVid team. We have been around since 2017 and started building our audio/video streaming platform on Tron. Since then we have taken a multi chain approach and branched to other chains out while also getting in to the NFT space. As many projects started popping up in the space we thought we could bring something even more unique, decentralized and fresh to the ecosystem.
@@ -137,16 +134,37 @@
                             No Anons. 100% Transparent
                         </span>
                     </p>
+                    <div class="person">
+                        <a href="Beatzcoin.io/team">Beatzcoin.io/team</a>
+                        <h4>
+                           <div>
+                                Adolfo Garza 
+                                <br>
+                                <span>Goon Artist</span>
+                           </div>
+                           <a href=""><img src="/assets/img/IG.svg" alt=""></a>
+                        </h4>
+                    </div>
+                    </p>
                 </div>
             </div>
         </div>
     </section>
 
-    <section class="roadmap">
+    <!-- <section class="roadmap">
         <div class="container">
             <div class="roadmap-container">
                 <h2>NFT Road Map</h2>
                 <img src="/assets/img/Group2190.png" alt="">
+            </div>
+        </div>
+    </section> -->
+
+    <section class="roadmap">
+        <div class="container">
+            <div class="roadmap-container">
+                <h2>NFT Road Map</h2>
+                <img src="/assets/img/roadmap.svg" alt="">
             </div>
         </div>
     </section>
