--- a/index.html
+++ b/index.html
@@ -50,8 +50,46 @@
                     <h1 class="title">VIBRAGOONS</h1>
                     <h3>Tron Edition</h3>
                     <h4>15000 Unique NFT Game collectibles</h4>
-                    <h1 class="coming-soon">Coming Soon</h1>
+                    <!-- <h1 class="coming-soon">Coming Soon</h1> -->
                     <!-- <a href="">EXPLORE</a> -->
+                    <div class="count-down">
+                        <div class="count-down-item">
+                            <div class="counting">
+                                <span>2</span>
+                                <span>2</span>
+                            </div>
+                            <div class="title">
+                                Days
+                            </div>
+                        </div>
+                        <div class="count-down-item">
+                            <div class="counting">
+                                <span>2</span>
+                                <span>2</span>
+                            </div>
+                            <div class="title">
+                                Hrs
+                            </div>
+                        </div>
+                        <div class="count-down-item">
+                            <div class="counting">
+                                <span>2</span>
+                                <span>2</span>
+                            </div>
+                            <div class="title">
+                                Mins
+                            </div>
+                        </div>
+                        <div class="count-down-item">
+                            <div class="counting">
+                                <span>2</span>
+                                <span>2</span>
+                            </div>
+                            <div class="title">
+                                Secs
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <div class="col-lg-6 right">
                     <img src="/assets/img/banner-img.png" alt="">
