--- a/index.html
+++ b/index.html
@@ -98,6 +98,25 @@
         </div>
     </section>
 
+    <section class="mint-stats">
+        <div class="container">
+            <h3>Mint Stats  </h3>
+
+            <div class="stats">
+                <div class="minted">
+                    <h5>Total Minted</h5>
+                    <div>
+                        <span class="value">3421</span> <span class="total">/5000</span>
+                    </div>
+                </div>
+                <div class="holder">
+                    <h5>VibraGoon Holders</h5>
+                    <span>500</span>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <section class="half-image-half-text">
         <div class="container">
             <div class="row">
